--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "npm-run-all webpack-dev-derver",
+    "webpack": "webpack --config=./webpack/webpack.dev.config",
+    "webpack-dev-derver": "webpack-dev-server --config=./webpack/webpack.dev.config --hot --progress --colors --open",
+    "build-dev": "npm-run-all webpack",
+    "build-prod": "webpack --config=./webpack/webpack.production.config --progress --profile --colors"
   },
   "repository": {
     "type": "git",
@@ -19,6 +23,19 @@
   "homepage": "https://github.com/shimizacken/hello-react-fiber#readme",
   "dependencies": {
     "react": "^16.0.0-rc.2",
-    "react-dom": "^16.0.0-rc.2"
+    "react-dom": "^16.0.0-rc.2",
+    "react-router-dom": "^4.2.2"
+  },
+  "devDependencies": {
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "extract-text-webpack-plugin": "^3.0.0",
+    "html-webpack-plugin": "^2.30.1",
+    "npm-run-all": "^4.1.1",
+    "webpack": "^3.5.6",
+    "webpack-cleanup-plugin": "^0.5.1",
+    "webpack-dev-server": "^2.7.1"
   }
 }
